Fixed custom game button alignment

--- a/src/views/Play/CustomGames.styl
+++ b/src/views/Play/CustomGames.styl
@@ -87,7 +87,7 @@
     margin-top: 2rem;
     margin-bottom: 8rem;
     display: flex;
-    gap: 1rem;
+    gap: 2rem;
     justify-content: center;
 
     &.showing-custom-games {
@@ -97,5 +97,6 @@
     button {
         height: 3rem;
         font-size: 1.3rem;
+        width: 17rem;
     }
 }
